--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake python3 python3-pip
-          pip3 install --break-system-packages networkx
+          pip3 install networkx
 
       - name: Setup Go
         uses: actions/setup-go@v5
